// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bcXHqe sc-gswNZR bQFwRY gWKlTj"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bcXHqe sc-gswNZR hzLSTn gWKlTj"
>
  foo
</button>
`;
